Fix navbar sticky on Safari

--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -47,3 +47,7 @@
   }
 
 }
+
+.sticky {
+  position: -webkit-sticky;
+}
